--- a/A1.cbp
+++ b/A1.cbp
@@ -18,7 +18,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-lcppunit" />
-					<Add library="libgui.a" />
+					<Add library="libgui-bugs.a" />
 					<Add directory="../A1" />
 				</Linker>
 			</Target>
